--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@
 
 DATABASE_URL=mysql://root:yrzyAehLdXgbRTKGQSLLZtgQjpKxkliZ@hopper.proxy.rlwy.net:50370/railway
 PORT=8080
+VITE_API_URL=https://all-birds-backend-production.up.railway.app
 JWT_SECRET=mySuperSecretKey123
 EMAIL_USER=azazkhan007007@gmail.com
 EMAIL_PASS=tsge sgwx hbhi dzbd
